--- a/public/index.html
+++ b/public/index.html
@@ -6,22 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description"
-      content="Landy is a free React landing page template designed for developers and startups." />
+      content="SystEin Solutions provides specialized AI agents for various industries." />
     <meta name="keywords"
-      content="Landy is a free React landing page template designed for developers and startups." />
-    <meta property="og:title" content="Landy - React Template" />
+      content="SystEin Solutions, AI agents, specialized AI solutions" />
+    <meta property="og:title" content="SystEin Solutions | Specialized AI Agents" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://landy.website/" />
+    <meta property="og:url" content="https://systein/" />
     <meta property="og:description"
-      content="Landy is a free React landing page template designed for developers and startups." />
+      content="SystEin Solutions provides specialized AI agents for various industries." />
     <meta name="robots" content="index, follow" />
     <meta property="og:locale" content="en_EN" />
-    <meta property="og:site_name" content="Landy" />
-    <meta property="og:url" content="https://landy.website/" />
-    <meta property="twitter:title" content="Landy - React Template" />
+    <meta property="og:site_name" content="SystEin Solutions" />
+    <meta property="og:url" content="https://systein.nl/" />
+    <meta property="twitter:title" content="SystEin Solutions | Specialized AI Agents" />
     <meta property="twitter:description"
-      content="Landy is a free React landing page template designed for developers and startups." />
-    <meta property="twitter:site" content="https://landy.website/" />
+      content="SystEin Solutions provides specialized AI agents for various industries." />
+    <meta property="twitter:site" content="https://systein.nl/" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -31,7 +31,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Landy - React Template</title>
+    <title>SystEin Solutions | Specialized AI Agents</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
